[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.5.0" # This version is purely for the main cloudmqtt library, and should not be used by any others
authors = ["Marcel Müller <neikos@neikos.email>"]
repository = "https://github.com/TheNeikos/cloudmqtt"
license = "MPL-2.0"

[workspace.dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
dashmap = "6.1"
futures = "0.3.31"
nom = { version = "7.1.3" }
nom-supreme = { version = "0.8.0" }
num_enum = { version = "0.7.5", default-features = false }
derive_more = { version = "2", default-features = false }
paste = "1.0.14"
pretty_assertions = "1.4.1"
rustc-hash = { version = "2.1.1", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0" }
tokio-util = { version = "0.7.17" }
tracing = { version = "0.1.43", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false }
winnow = { version = "0.7", default-features = false }
yoke = { version = "0.8.1", default-features = false }


mqtt-format = { version = "0.5.0", path = "crates/mqtt-format", default-features = false }
cloudmqtt-core = { version = "0.5.0", path = "crates/cloudmqtt-core", default-features = false }

cloudmqtt-workspace-hack = { version = "0.0.0" }

[patch.crates-io.cloudmqtt-workspace-hack]
path = "crates/workspace-hack"

[workspace.metadata.crane]
name = "cloudmqtt"
