[package]
name = "mqtt-format"
version = "0.5.0"
edition = "2021"
description = "A pure Rust MQTT packet parser and serializer"
readme = "README.md"
repository = "https://github.com/TheNeikos/cloudmqtt"
license = "MPL-2.0"
keywords = ["mqtt", "cloud"]
categories = ["embedded", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mqttv5"]
yoke = ["dep:yoke"]
mqttv3 = ["dep:futures", "dep:nom", "dep:nom-supreme"]
mqttv5 = ["dep:winnow"]

[dependencies]
futures = { workspace = true, optional = true }
nom = { workspace = true, optional = true }
nom-supreme = { workspace = true, optional = true }
num_enum = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
winnow = { workspace = true, optional = true }
yoke = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
