[package]
name = "mqtt-format"
version = "0.5.0"
edition = "2021"
description = "A pure Rust MQTT packet parser and serializer"
readme = "README.md"
repository = "https://github.com/TheNeikos/cloudmqtt"
license = "MPL-2.0"
keywords = ["mqtt", "cloud"]
categories = ["embedded", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mqttv5", "mqttv3"]
std = ["num_enum/std"]
yoke = ["dep:yoke"]
mqttv3 = ["std", "dep:futures", "dep:nom", "dep:nom-supreme", "dep:thiserror"]
mqttv5 = ["dep:winnow"]

[dependencies]
futures = { version = "0.3.28", optional = true }
nom = { version = "7.1.3", optional = true }
nom-supreme = { version = "0.8.0", optional = true }
num_enum = { version = "0.7.3", default-features = false }
paste = "1.0.14"
winnow = { version = "0.6.20", optional = true, default-features = false }
thiserror = { version = "1.0.64", optional = true }
yoke = { version = "0.7.4", features = [
    "derive",
], optional = true, default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.40.0", features = ["test-util", "macros"] }
