[package]
name = "mqtt-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
futures = "0.3"
miette = { version = "5.1.1", features = ["fancy"] }
tokio = { version = "1.20", features = ["macros", "process", "rt", "rt-multi-thread"] }
