[package]
name = "mqtt-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
async-trait = "0.1.60"
bytes = "1.1.0"
clap = { version = "4.1.1", features = ["derive"] }
futures = "0.3"
miette = { version = "5.1.1", features = ["fancy"] }
mqtt-format = { path = "../mqtt-format", version = "0.4.0" }
nom = { version = "7.1.3" }
textwrap = "0.16.0"
tokio = { version = "1.24", features = ["macros", "process", "rt", "rt-multi-thread", "io-util", "time"] }
static_assertions = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
