[package]
name = "cloudmqtt"
version.workspace = true
edition = "2024"
description = "A pure Rust MQTT client and server library"
readme = "README.md"
keywords = ["mqtt", "cloud"]
categories = ["embedded"]
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hakari.workspace = true
