[package]
name = "cloudmqtt"
version.workspace = true
edition = "2024"
description = "A pure Rust MQTT client and server library"
readme = "README.md"
keywords = ["mqtt", "cloud"]
categories = ["embedded"]
authors.workspace = true
repository.workspace = true
license.workspace = true

[[test]]
name = "check_cases"
harness = false

[features]
## Enable testing-related utility functions
##
## Any item only exported through this feature should not be considered stable.
test_utils = []

[dependencies]
cloudmqtt-core = { workspace = true, features = ["tracing"] }
dashmap.workspace = true
futures.workspace = true
mqtt-format = { workspace = true, features = ["yoke"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
winnow.workspace = true
yoke = { workspace = true, features = ["alloc"] }
cloudmqtt-workspace-hack.workspace = true
humantime = "2.2"

[dev-dependencies]
camino = "1.1"
datatest-stable = "0.3.2"
test-dsl = "0.4.0"
miette = { version = "*", features = ["fancy"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
