[package]
name = "mqtt-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
async-trait = "0.1.79"
bytes = "1.6.0"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3"
miette = { version = "7.2.0", features = ["fancy"] }
mqtt-format = { path = "../mqtt-format", version = "0.5.0" }
nom = { version = "7.1.3" }
textwrap = "0.16.0"
tokio = { version = "1.37", features = ["macros", "process", "rt", "rt-multi-thread", "io-util", "time"] }
static_assertions = "1.1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
hakari = { version = "0.1", path = "../hakari" }
